contrast and dyslexic work but still bugs, wanted to submit fix for changing customer account settings.

--- a/GoodLooksBooks/web/css/custom_css/dark_contrast.css
+++ b/GoodLooksBooks/web/css/custom_css/dark_contrast.css
@@ -10,14 +10,18 @@ a {
 
 .btn-default {
   color: #333;
-  background-color: #fff;
+  background-color: #000;
   border-color: #ccc;
 }
 
 input {
-	background-color: #fff;
+	background-color: #000;
 }
 
 .glb-page {
-    background-color: #FFFFFF;
+    background-color: #000000;
+}
+
+body {
+    background: #000000;
 }
